feat(file): 实现文件分片上传与下载功能
- 新增文件分片上传接口，支持大文件分片上传
- 实现文件上传进度查询功能
- 添加文件合并接口，用于合并分片文件
- 实现文件下载接口，支持断点续传
- 新增文件上传异常处理机制
- 添加文件上传VO对象及映射转换
- 实现MinIO文件存储工具类优化
- 新增文件上传全局异常处理器
- 添加文件类型自动识别与存储桶分配逻辑
- 实现文件访问路径生成与管理
- 新增文件上传进度Redis存储支持
- 添加文件上传日志记录与监控